--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "name": "paulogdm.com-redirect",
-  "alias": "www.paulogdm.com",
+  "alias": ["www.paulogdm.com", "paulogdm-redirect.now.sh"],
   "routes": [
     {
       "src": "/(.*)",
